# clangd-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  test_server.py
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  code-format.yaml  code-lint.yaml  eof-newline.yaml  gh-action-lint.yaml  markdown.yaml  release.yaml  tests.yaml  typos.yaml  yaml.yaml
