[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "clangd-mcp"
version = "0.1.0"
description = "MCP server for clangd C++ language server"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Victor Baranov", email = "bar.victor.2002@gmail.com"}
]
keywords = [
    "clangd",
    "cpp",
    "mcp",
    "automation",
    "developer-tools",
    "productivity",
    "language-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/vbvictor/clangd-mcp"
Repository = "https://github.com/vbvictor/clangd-mcp"
Issues = "https://github.com/vbvictor/clangd-mcp/issues"
Changelog = "https://github.com/vbvictor/clangd-mcp/releases"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.13",
    "black==25.11.0",
    "yamllint==1.37.1",
    "build==1.4.0",
    "twine==6.2.0",
]

[tool.ruff]
# Ignore line length rules (E501) - using black for formatting
lint.ignore = ["E501"]
